--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "jsrsasign": "^8.0.12",
     "jsrsasign-util": "^1.0.0",
     "moment": "^2.22.2",
-    "uuid": "^3.3.2"
+    "protobufjs": "^6.8.8",
+    "uuid": "^3.3.2",
+    "ws": "^6.0.0"
   },
   "scripts": {
     "test": "jest"
