--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
   "author": "c4w <“chen4w@sina.com”>",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.0.0-rc.1",
-    "babel-core": "^7.0.0-0",
+    "@babel/cli": "7.0.0-beta.54",
+    "@babel/core": "7.0.0-beta.54",
+    "@babel/preset-env": "7.0.0-beta.54",
+    "babel-jest": "^23.4.2",
+    "babel-loader": "^8.0.0-beta.0",
+    "babel-core": "^7.0.0-bridge.0",
     "jest": "^23.5.0",
     "regenerator-runtime": "^0.12.1"
   },
   "dependencies": {
-    "babel-jest": "^23.4.2",
-    "babel-preset-env": "^7.0.0-beta.3",
     "jsrsasign": "^8.0.12",
     "jsrsasign-util": "^1.0.0",
     "moment": "^2.22.2",
@@ -22,6 +24,8 @@
     "ws": "^6.0.0"
   },
   "scripts": {
+    "build": "babel ./src -d ./build --source-maps",
+    "start": "npm run build && node ./build/index.js",
     "test": "jest"
   }
 }
