--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,30 +1,50 @@
 {
-    "version": "0.2.0",
-    "configurations": [
-      {
-        "type": "node",
-        "request": "launch",
-        "name": "Launch Program",
-        "program": "${workspaceRoot}/build/index.js",
-        "sourceMaps": true,
-        "trace": true,
-        "outFiles": [
-            "${workspaceRoot}/build/*"
-        ]
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Launch Program",
+      "program": "${workspaceRoot}/build/index.js",
+      "sourceMaps": true,
+      "trace": true,
+      "outFiles": [
+        "${workspaceRoot}/build/*"
+      ]
     },
     {
       "type": "node",
       "request": "attach",
       "name": "Attach",
       "port": 5858
-  },
-
-      {
-        "type": "node",
-        "request": "launch",
-        "name": "Run tests",
-        "program": "${workspaceRoot}/node_modules/.bin/jest"
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Jest All",
+      "program": "${workspaceFolder}/node_modules/.bin/jest",
+      "args": [
+        "--runInBand"
+      ],
+      "console": "integratedTerminal",
+      "internalConsoleOptions": "neverOpen",
+      "windows": {
+        "program": "${workspaceFolder}/node_modules/jest/bin/jest",
       }
-    ]
-  }
- 
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Jest Current File",
+      "program": "${workspaceFolder}/node_modules/.bin/jest",
+      "args": [
+        "${relativeFile}"
+      ],
+      "console": "integratedTerminal",
+      "internalConsoleOptions": "neverOpen",
+      "windows": {
+        "program": "${workspaceFolder}/node_modules/jest/bin/jest",
+      }
+    }
+  ]
+}
