--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,7 @@ bower_components
 .lock-wscript
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
-build/Release
+build/
 
 # Dependency directories
 node_modules/
@@ -56,4 +56,3 @@ typings/
 
 # dotenv environment variables file
 .env
-
