完成密钥对的生成、导出为pem格式以及从pem格式导入；数据签名以及验签；X509证书生成以及证书签名验证；签名交易生成及交易签名验证

--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
   "dependencies": {
     "jsrsasign": "^8.0.12",
     "jsrsasign-util": "^1.0.0",
+    "long": "^4.0.0",
     "moment": "^2.22.2",
     "protobufjs": "^6.8.8",
     "request": "^2.88.0",
     "request-promise": "^4.2.2",
-    "uuid": "^3.3.2",
     "ws": "^6.0.0"
   },
   "scripts": {
