添加indexDB操作支持

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "regenerator-runtime": "^0.12.1"
   },
   "dependencies": {
+    "dexie": "^2.0.4",
     "jsrsasign": "^8.0.12",
     "jsrsasign-util": "^1.0.0",
     "long": "^4.0.0",
