--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "rclinktest",
-  "version": "1.0.2",
+  "name": "rclink",
+  "version": "1.0.4",
   "main": "./src/index.js",
   "repository": "https://gitee.com/BTAJL/RCNode.git",
   "author": "c4w <“chen4w@sina.com”>, jaytsang <beaclnd92@gmail.com>",
