--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rclink",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "main": "./src/index.js",
   "repository": "https://gitee.com/BTAJL/RCNode.git",
   "author": "c4w <“chen4w@sina.com”>",
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "dexie": "^2.0.4",
+    "flat-plain-object": "^1.0.3",
     "jsrsasign": "^8.0.12",
     "jsrsasign-util": "^1.0.0",
     "long": "^4.0.0",
