--- a/package.json
+++ b/package.json
@@ -22,8 +22,6 @@
     "regenerator-runtime": "^0.12.1"
   },
   "dependencies": {
-    "dexie": "^2.0.4",
-    "flat-plain-object": "^1.0.3",
     "jsrsasign": "^8.0.12",
     "jsrsasign-util": "^1.0.0",
     "long": "^4.0.0",
@@ -31,6 +29,7 @@
     "protobufjs": "^6.8.8",
     "request": "^2.88.0",
     "request-promise": "^4.2.2",
+    "websocket": "^1.0.28",
     "ws": "^6.0.0"
   },
   "scripts": {
