--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-jest": "^23.4.2",
     "babel-loader": "^8.0.0-beta.0",
     "jest": "^23.5.0",
+    "jsdoc": "^3.5.5",
     "regenerator-runtime": "^0.12.1"
   },
   "dependencies": {
