--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@babel/cli": "7.0.0-beta.54",
     "@babel/core": "7.0.0-beta.54",
     "@babel/preset-env": "7.0.0-beta.54",
-    "babel-core": "^7.0.0-bridge.0",
+    "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^23.4.2",
     "babel-loader": "^8.0.0-beta.0",
     "jest": "^23.5.0",
