--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rclink",
   "main": "./src/index.js",
-  "version": "1.0.26",
+  "version": "1.0.27",
   "repository": "https://gitee.com/BTAJL/RCNode.git",
   "author": "c4w <“chen4w@sina.com”>",
   "contributors": [
@@ -23,6 +23,7 @@
     "regenerator-runtime": "^0.12.1"
   },
   "dependencies": {
+    "bitcore-lib": "^0.15.0",
     "jsrsasign": "^8.0.12",
     "jsrsasign-util": "^1.0.0",
     "long": "^4.0.0",
