--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "protobufjs": "^6.8.8",
     "request": "^2.88.0",
     "request-promise": "^4.2.2",
-    "websocket": "^1.0.28",
-    "ws": "^6.0.0"
+    "websocket": "^1.0.28"
   },
   "scripts": {
     "build": "babel ./src -d ./build --source-maps",
@@ -42,6 +41,5 @@
   },
   "browser": {
     "./src/restSendTX.js": "./src/browser/restSendTX.js"
-
   }
 }
