--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^23.4.2",
     "babel-loader": "^8.0.0-beta.0",
+    "eslint": "^5.11.1",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jest": "^22.1.2",
     "jest": "^23.5.0",
     "jsdoc": "^3.5.5",
     "regenerator-runtime": "^0.12.1"
