--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jest": "^22.1.2",
+    "eslint-plugin-jquery": "^1.5.0",
     "jest": "^23.5.0",
     "jsdoc": "^3.5.5",
     "regenerator-runtime": "^0.12.1"
