--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -33,6 +33,7 @@
       "name": "Jest Current File",
       "program": "${workspaceFolder}/node_modules/.bin/jest",
       "args": [
+        "--coverage",
         "${relativeFile}"
       ],
       "console": "integratedTerminal",
