--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@babel/cli": "7.0.0-beta.54",
     "@babel/core": "7.0.0-beta.54",
+    "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "7.0.0-beta.54",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^23.4.2",
@@ -30,6 +31,7 @@
     "rimraf": "^2.6.3"
   },
   "dependencies": {
+    "@babel/runtime": "^7.2.0",
     "bitcore-lib": "^0.15.0",
     "jsrsasign": "^8.0.12",
     "jsrsasign-util": "^1.0.0",
@@ -47,7 +49,9 @@
     "prepublishOnly": "npm run build",
     "eslint": "eslint ."
   },
-  "pre-commit": ["eslint"],
+  "pre-commit": [
+    "eslint"
+  ],
   "browser": {
     "./lib/restSendTX.js": "./lib/browser/restSendTX.js"
   }
