:heavy_plus_sign: 使用cross-fetch包替换request-promise
使用cross-fetch包替换request-promise，以自适应browser环境和node环境

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,8 @@
         "no-trailing-spaces": "off",
         "quotes": ["error", "double"],
         "no-param-reassign": ["error", {"props": false}],
-        "no-restricted-syntax": "off"
+        "no-restricted-syntax": "off",
+
+        "jest/no-focused-tests": "off"
     }
 }
