--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rclink",
   "main": "./lib/index.js",
-  "version": "1.0.36",
+  "version": "1.0.37",
   "repository": "https://gitee.com/BTAJL/RCNode.git",
   "author": "c4w <“chen4w@sina.com”>",
   "contributors": [
@@ -33,7 +33,6 @@
   "dependencies": {
     "@babel/runtime": "^7.2.0",
     "bitcore-lib": "^0.15.0",
-    "cross-fetch": "^3.0.0",
     "jsrsasign": "^8.0.12",
     "jsrsasign-util": "^1.0.0",
     "long": "^4.0.0",
@@ -54,6 +53,6 @@
     "eslint"
   ],
   "browser": {
-    "./lib/restSendTX.js": "./lib/browser/restSendTX.js"
+    "./lib/rest.js": "./lib/browser/rest.js"
   }
 }
