:white_check_mark: 迁移node环境下的测试代码到browser环境
- 使用pbjs生成的static module代替reflection protobuf

- 使用coinstring代替bitcore-lib包计算bitcoin address(P2PKH)

- 将node环境下的测试代码迁移到browser环境

- 将被测试代码由src/*改为lib/*

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
         "no-param-reassign": ["error", {"props": false}],
         "no-restricted-syntax": "off",
 
-        "jest/no-focused-tests": "off"
+        "jest/no-focused-tests": "off",
+        "jest/no-alias-methods": "off"
     }
 }
