--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "license": "MIT",
   "jest": {
     "testEnvironment": "node",
-    "testPathIgnorePatterns": ["<rootDir>/node_modules/", "<rootDir>/test/browser/"]
+    "testPathIgnorePatterns": [
+      "<rootDir>/node_modules/",
+      "<rootDir>/test/browser/"
+    ]
   },
   "devDependencies": {
     "@babel/cli": "7.0.0-beta.54",
@@ -30,15 +33,18 @@
     "karma": "^3.1.4",
     "karma-chrome-launcher": "^2.2.0",
     "karma-jasmine": "^2.0.1",
+    "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^3.0.5",
     "pre-commit": "^1.2.2",
     "regenerator-runtime": "^0.12.1",
     "rimraf": "^2.6.3",
-    "webpack": "^4.28.4"
+    "source-map-loader": "^0.2.4",
+    "webpack": "^4.29.0"
   },
   "dependencies": {
     "@babel/runtime": "^7.2.0",
     "bitcore-lib": "^0.15.0",
+    "coinstring": "^2.3.0",
     "jsrsasign": "^8.0.12",
     "jsrsasign-util": "^1.0.0",
     "long": "^4.0.0",
@@ -53,6 +59,7 @@
     "build": "rimraf ./lib && babel ./src -d ./lib --source-maps",
     "test:node": "jest ./test/*",
     "test:browser": "karma start test/browser/karma.conf.js",
+    "test": "npm run test:node && npm run test:browser",
     "prepublishOnly": "npm run build",
     "eslint": "eslint ."
   },
