--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "coinstring": "^2.3.0",
     "jsrsasign": "^8.0.12",
     "jsrsasign-util": "^1.0.0",
+    "lodash": "^4.17.11",
     "long": "^4.0.0",
     "mock-fs": "^4.7.0",
     "moment": "^2.22.2",
