--- a/package.json
+++ b/package.json
@@ -69,6 +69,9 @@
     "eslint"
   ],
   "browser": {
-    "./lib/rest.js": "./lib/browser/rest.js"
+    "./lib/restSendTX.js": "./lib/browser/restSendTX.js",
+    "./lib/restGet.js": "./lib/browser/restGet.js",
+    "./src/restSendTX.js": "./src/browser/restSendTX.js",
+    "./src/restGet.js": "./src/browser/restGet.js"
   }
 }
