--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rclink",
   "main": "./lib/index.js",
-  "version": "1.0.38",
+  "version": "2.0.0-alpha",
   "repository": "https://gitee.com/BTAJL/RCNode.git",
   "author": "c4w <“chen4w@sina.com”>",
   "contributors": [
