--- a/package.json
+++ b/package.json
@@ -45,11 +45,11 @@
     "@babel/runtime": "^7.2.0",
     "bitcore-lib": "^0.15.0",
     "coinstring": "^2.3.0",
+    "fs-extra": "^8.0.1",
     "jsrsasign": "^8.0.12",
     "jsrsasign-util": "^1.0.0",
     "lodash": "^4.17.11",
     "long": "^4.0.0",
-    "mock-fs": "^4.7.0",
     "moment": "^2.22.2",
     "protobufjs": "^6.8.8",
     "request": "^2.88.0",
