<fix> 新版本NodeJS环境不支持签名算法名ecdsa-with-SHA1
为保持兼容Browser与NodeJS环境，根据不同环境使用不同签名算法名，
Browser下使用ecdsa-with-SHA1，NodeJS下使用SHA1

--- a/package.json
+++ b/package.json
@@ -71,7 +71,9 @@
   "browser": {
     "./lib/restSendTX.js": "./lib/browser/restSendTX.js",
     "./lib/restGet.js": "./lib/browser/restGet.js",
+    "./lib/algorithmNames.js": "./lib/browser/algorithmNames.js",
     "./src/restSendTX.js": "./src/browser/restSendTX.js",
-    "./src/restGet.js": "./src/browser/restGet.js"
+    "./src/restGet.js": "./src/browser/restGet.js",
+    "./src/algorithmNames.js": "./src/browser/algorithmNames.js"
   }
 }
