--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,8 @@ bower_components
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/
 
-lib/
+lib/*/*.map
+lib/*.map
 
 # Dependency directories
 node_modules/
